Fix minor code smells